--- a/src/test/java/TestConfig/Testdata.properties
+++ b/src/test/java/TestConfig/Testdata.properties
@@ -1,3 +1,7 @@
+browser=Chrome
+url=https://demo.nopCommerce.com/
+SAUCE_USERNAME=oauth-daptel1930-a0916
+SAUCE_ACCESS_KEY=af728c7f-a685-4ae7-bc63-fe79292df34e
 firstName=FirstName
 lastName=LastName
 day=15
@@ -5,11 +9,21 @@ month=5
 year=1999
 Email=harry
 EmailDomain=@gmail.com
-url=https://demo.nopCommerce.com/
 password=1234567
 ConfirmPassword=1234567
 expectedRegistrationCompleteMsg=Your registration completed
-browser=Chrome
 FriendEmail=test1email
 YourEmail=test2email
 PersonalMsg=Hello
+expectedEmailAFriendCompleteMsg=Only registered customers can use email a friend feature
+city=london
+address1=abc road,local
+postCode=ab1 cd2
+phoneNumber= 0123456789
+cardHolderName=H Potter
+cardNumber=4899705546323270
+expiredMonth=7
+expiredYear=2029
+cardCode=679
+//expectedBuildYourProductAddToCartCompleteMsg=The product has been added to your shopping cart
+expectedBuildYourProductSuccessfullyProcessedMsg=Your order has been successfully processed!
