--- a/pom.xml
+++ b/pom.xml
@@ -33,20 +33,20 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-chrome-driver</artifactId>
-      <version>4.9.0</version>
+      <version>4.8.3</version>
     </dependency>
 
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-firefox-driver</artifactId>
-      <version>4.9.1</version>
+      <version>4.8.3</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-edge-driver -->
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-edge-driver</artifactId>
-      <version>4.9.1</version>
+      <version>4.8.3</version>
     </dependency>
 
     <dependency>
@@ -71,6 +71,12 @@
       <groupId>io.cucumber</groupId>
       <artifactId>cucumber-core</artifactId>
       <version>7.11.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
